@@ -1,23 +1,7 @@
-name             = Catmandu-MAB2
+author           = Johann Rolschewski <jorol@cpan.org>
 license          = Perl_5
-author           = Johann Rolschewski <rolschewski@gmail.com>
 copyright_year   = 2013
 copyright_holder = Johann Rolschewski
-
-version          = 0.07
-
-[@Basic]
-[MetaJSON]
-[GithubMeta]
-issues = 1
-user = jorol
-[@Git]
 [PodWeaver]
-[CheckChangeLog]
 [OurPkgVersion]
-
-[Prereqs::FromCPANfile]
-
-[PruneFiles]
-filename = README.md
-filename = Makefile.PL
+[@Milla]
